2023-02-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	[devpdf]: Revise tests.

	* font/devpdf/tests/check-default-foundry.sh.in: Test only the
	base 14 fonts of the PDF standard unconditionally.  Test the
	remainder from the set of 35 commonly distributed only if a
	Ghostscript interpreter was detected at configuration time,
	because the latter fonts _must_ be embedded in PDF documents.
	If they're not present, skip the test rather than failing it.
	* font/devpdf/tests/check-urw-foundry.sh.in: Skip test if no URW
	fonts detected at configuration time, rather than failing it.
	* m4/groff.m4 (GROFF_GROPDF_PROGRAM_NOTICE)
	(GROFF_URW_FONTS_NOTICE): Drop warnings of expected test
	failures.  The tests no longer fail in the anticipated
	circumstances.

2023-02-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[devpdf]: Generate tests from template files, so we can populate
	the test scripts with information determined at configuration.
	The default foundry test depends on $GHOSTSCRIPT, and the URW
	foundry test on $urwfontsdir.

	* font/devpdf/tests/check-default-foundry.sh:
	* font/devpdf/tests/check-urw-foundry.sh: Rename these...
	* font/devpdf/tests/check-default-foundry.sh.in:
	* font/devpdf/tests/check-urw-foundry.sh.in: ...to these.

	* font/devpdf/devpdf.am (font_devpdf_default_test)
	(font_devpdf_urw_test): New variables store names of generated
	test scripts.
	(font/devpdf/tests/check-default-foundry.sh):
	(font/devpdf/tests/check-urw-foundry.sh): New targets produce
	test scripts from corresponding .in files.

2023-02-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[devpdf]: Trivially refactor.  Rename sed-substitutum [Lat.]
	from "@GROFF_GHOSTSCRIPT_INTERPRETERS@" to "@GHOSTSCRIPT@" for
	clarity and brevity; this is a scalar value containing the
	Autoconf-determined name of the Ghostscript interpreter.  It is
	not the same as the replacement that occurs in contrib/pdfmark.

	* font/devpdf/devpdf.am: